src/test/ui/associated-types/issue-43924.stderr
error[E0277]: the trait bound `(dyn std::string::ToString + 'static): std::default::Default` is not satisfied
  --> $DIR/issue-43924.rs:7:15
   |
LL | trait Foo<T: Default + ToString> {
   | -------------------------------- required by `Foo`
LL |     type Out: Default + ToString + ?Sized = dyn ToString;
   |               ^^^^^^^ the trait `std::default::Default` is not implemented for `(dyn std::string::ToString + 'static)`

error[E0277]: the trait bound `(dyn std::string::ToString + 'static): std::default::Default` is not satisfied
  --> $DIR/issue-43924.rs:10:6
   |
LL | trait Foo<T: Default + ToString> {
   |       ---
LL |     type Out: Default + ToString + ?Sized = dyn ToString;
   |               ------- required by this bound in `Foo`
...
LL | impl Foo<u32> for () {}
   |      ^^^^^^^^ the trait `std::default::Default` is not implemented for `(dyn std::string::ToString + 'static)`
   |
   = note: required because of the requirements on the impl of `std::default::Default` for `<() as Foo<u32>>::Out`

error[E0277]: the trait bound `(dyn std::string::ToString + 'static): std::default::Default` is not satisfied
  --> $DIR/issue-43924.rs:11:6
   |
LL | trait Foo<T: Default + ToString> {
   |       ---
LL |     type Out: Default + ToString + ?Sized = dyn ToString;
   |               ------- required by this bound in `Foo`
...
LL | impl Foo<u64> for () {}
   |      ^^^^^^^^ the trait `std::default::Default` is not implemented for `(dyn std::string::ToString + 'static)`
   |
   = note: required because of the requirements on the impl of `std::default::Default` for `<() as Foo<u64>>::Out`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
